[gd_scene load_steps=14 format=3 uid="uid://b5kqvwo8md4m"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_t04kh"]
[ext_resource type="FontFile" uid="uid://bdhpjd3wou0xy" path="res://assets/ThaleahFat.ttf" id="2_6o5xa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vguan"]
bg_color = Color(0.372549, 0.141176, 0.65098, 1)

[sub_resource type="Theme" id="Theme_jyung"]
Button/styles/normal = SubResource("StyleBoxFlat_vguan")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u217j"]
bg_color = Color(0.658824, 0.545098, 0.760784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mxm4"]
bg_color = Color(0.768627, 0.443137, 0.894118, 1)

[sub_resource type="Theme" id="Theme_6mx2f"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_u217j")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_3mxm4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o8ts"]
bg_color = Color(0.360784, 0.266667, 0.615686, 1)

[sub_resource type="Theme" id="Theme_y1oy0"]
Button/styles/normal = SubResource("StyleBoxFlat_0o8ts")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obd3b"]
bg_color = Color(0.360784, 0.266667, 0.615686, 1)

[sub_resource type="Theme" id="Theme_l82f1"]
Button/styles/normal = SubResource("StyleBoxFlat_obd3b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upvxu"]
bg_color = Color(0.360784, 0.266667, 0.615686, 1)

[sub_resource type="Theme" id="Theme_estp2"]
Button/styles/normal = SubResource("StyleBoxFlat_upvxu")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t04kh")

[node name="PausePack" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -224.0
offset_right = 200.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jyung")

[node name="MusicLabel" type="Label" parent="PausePack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -132.0
offset_right = 45.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 35
text = "Music "

[node name="MusicSlider" type="HSlider" parent="PausePack/MusicLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 4.5
offset_right = 150.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = SubResource("Theme_6mx2f")

[node name="SFXLabel" type="Label" parent="PausePack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -70.0
offset_right = 27.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 35
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PausePack/SFXLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 4.5
offset_right = 150.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = SubResource("Theme_6mx2f")

[node name="NameofPack" type="Label" parent="PausePack"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 100
text = "Paused"

[node name="MainMenu" type="Button" parent="PausePack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 18.0
offset_right = 100.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_y1oy0")
theme_override_colors/font_pressed_color = Color(0.847059, 0.85098, 0.870588, 0)
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 35
text = "Main menu"

[node name="Resume" type="Button" parent="PausePack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 88.0
offset_right = 100.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_l82f1")
theme_override_colors/font_pressed_color = Color(0.847059, 0.85098, 0.870588, 0)
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 35
text = "Resume
"

[node name="Replay" type="Button" parent="PausePack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 158.0
offset_right = 100.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_estp2")
theme_override_colors/font_pressed_color = Color(0.847059, 0.85098, 0.870588, 0)
theme_override_fonts/font = ExtResource("2_6o5xa")
theme_override_font_sizes/font_size = 35
text = "Replay
"

[connection signal="pressed" from="PausePack/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PausePack/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePack/Replay" to="." method="_on_replay_pressed"]
